@@ -2028,10 +2028,9 @@
     </tr>
 
     <tr>
-      <td><pre>-uselauncher &lt;1|0&gt;</pre></td>
-      <td>Use the built-in ROM launcher.  If disabled, launching Stella will
-        simply print a help message, and exiting a ROM will completely
-        exit the program.</td>
+      <td><pre>-exitlauncher &lt;1|0&gt;</pre></td>
+      <td>Always exit to ROM launcher when exiting a ROM (normally, an exit to
+        launcher only happens when started with the launcher).</td>
     </tr>
 
     <tr>
@@ -2547,7 +2546,7 @@
   <p>Several options are configurable in the ROM launcher.  The size of the
   launcher and fonts, as well as the 'ROM info viewer' can be changed in
   <b>UI Settings =&gt; Launcher</b> dialog, as shown below:</p>
-  <img src="graphics/launcher_options.png">
+  <img src="graphics/options_ui.png">
   <p>Most of the options are self-explanatory, except for the 'ROM Info
   viewer', which is described below.</p>
 
